izmene font cirilica

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     
 <!--Online font not working on Github for Chrome because http/https protocol conflict-->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400&subset=latin-ext" rel="stylesheet">
         
   
     <link rel="stylesheet" type="text/css" href="vendors/css/magnific-popup.css">
