link ka telefonu dodat, responsiv hero izmenjen

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rostilj Cuburac</title>
+    <title>Rostilj Cuburac Beograd dostava</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Rostilj Cuburac Beograd. Dostava dostupna. Rostilj kod pravih ljudi.">
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     
@@ -46,7 +47,7 @@
                     <div class="cenovnik_upper_info">
                         <i class="ion-ios-telephone-outline"></i><br>
                         <h3>telefon za porudzbine</h3>
-                        <p>063 17 44 191</p>
+                        <p><a class="call" href="tel:0631744191">063 17 44 191</a></p>
                         <p>Besplatna dostava<br> za porudzbine preko 1200rsd</p>
                     </div>
                     <div class="cenovnik_upper_info">
@@ -120,7 +121,7 @@
                         </div>
                         <div>
                             <i class="ion-ios-telephone-outline"></i>
-                            <p>Telefon za porudzbine: 063 17 44 191</p>
+                            <p>Telefon za porudzbine: <a class="call" href="tel:0631744191">063 17 44 191</a></p>
                         </div>
                     </div>
                 </div>
