ceo telefonski broj ide dole responsive

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </div>
                         <div>
                             <i class="ion-ios-telephone-outline"></i>
-                            <p>Telefon za porudzbine: <a class="call" href="tel:0631744191">063 17 44 191</a></p>
+                            <p>Telefon za porudzbine: <a class="call" href="tel:0631744191"><br class="newRow">063 17 44 191</a></p>
                         </div>
                     </div>
                 </div>
