meta description dodat

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Rostilj Cuburac Beograd dostava</title>
+    <meta name="description" content="Probajte i uverite se sami u nas kvalitet. Rostilj Cuburac, Gradic Pejton - Vracar. Vrsimo dostavu na teritoriji celog Beograda.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="Rostilj Cuburac Beograd. Dostava dostupna. Rostilj kod pravih ljudi.">
@@ -10,8 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="vendors/css/magnific-popup.css">
     <link rel="stylesheet" type="text/css" href="resourses/css/style.css">
-    <link rel="stylesheet" type="text/css" href="resourses/css/media%20queries.css">
-    
+    <link rel="stylesheet" type="text/css" href="resourses/css/media%20queries.css"> 
 </head>
 <body>
     <div class="container">
